--- a/resume mini project/assets/css/style.css
+++ b/resume mini project/assets/css/style.css
@@ -87,11 +87,10 @@ header {
 }
 
 .logo {
-    background: url("../images/codinghero.png");
+    background-image:url('assets/image/codinghero.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 360px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
